--- a/1-topic_modeling.ipynb
+++ b/1-topic_modeling.ipynb
@@ -100,27 +100,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "6c35c883",
    "metadata": {},
    "outputs": [],
    "source": [
     "### LSA\n",
-    "# lsa = TruncatedSVD(n_components=108)\n",
-    "# lsa_data = lsa.fit_transform(tfidf_features)\n",
-    "# lsa_data_normalised = normalize(lsa_data, norm=\"l2\", axis=1)"
+    "lsa = TruncatedSVD(n_components=108)\n",
+    "lsa_data = lsa.fit_transform(tfidf_features)\n",
+    "lsa_data_normalised = normalize(lsa_data, norm=\"l2\", axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "f6592352",
    "metadata": {},
    "outputs": [],
    "source": [
     "### LDA\n",
-    "# lda = LatentDirichletAllocation(n_components=108)\n",
-    "# lda_data_normalised = lda.fit_transform(tfidf_features, normalize=True)"
+    "lda = LatentDirichletAllocation(n_components=108)\n",
+    "lda_data_normalised = lda.fit_transform(tfidf_features, normalize=True)"
    ]
   },
   {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 66,
    "id": "4b4cd9df",
    "metadata": {},
    "outputs": [
@@ -191,9 +191,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Recall: 62.22 %\n",
-      "Recall on non-tabular docs: 91.67 %\n",
-      "Average comparisons to make: 13.72\n"
+      "Recall: 100.0 %\n",
+      "Recall on non-tabular docs: 100.0 %\n",
+      "Average comparisons to make: 49.00\n"
      ]
     },
     {
@@ -239,53 +239,53 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>40</td>\n",
+       "      <td>100046</td>\n",
        "      <td>Finance</td>\n",
-       "      <td>Acme Government Solutions is a government indu...</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[0.0, 0.028452418256950295, 0.0, 0.0, 0.009268...</td>\n",
-       "      <td>[18, 88, 93, 84, 17, 98, 79, 60, 44, 34, 1, 76...</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>JetWing Aviation, established on April 15, 200...</td>\n",
+       "      <td>[46]</td>\n",
+       "      <td>[0.0011499778990178046, 0.0011499778990178046,...</td>\n",
+       "      <td>[78, 17]</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>41</td>\n",
+       "      <td>100071</td>\n",
        "      <td>Finance</td>\n",
-       "      <td>Entertainment Enterprises Inc. is an entertain...</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 6.0549910910951...</td>\n",
-       "      <td>[11]</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>ABC Education Corporation, a publicly listed c...</td>\n",
+       "      <td>[71]</td>\n",
+       "      <td>[0.001030695364096049, 0.001030695364096049, 0...</td>\n",
+       "      <td>[78, 71]</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>42</td>\n",
-       "      <td>Finance</td>\n",
-       "      <td>Advanced Manufacturing Solutions Inc., establi...</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[0.0, 0.00963491193391321, 0.00073682970161823...</td>\n",
-       "      <td>[36, 107, 77, 44, 89, 31, 34, 76, 88, 22, 73, ...</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>100208</td>\n",
+       "      <td>Medical</td>\n",
+       "      <td>Hospitalization Record\\n\\nBasic Information:\\n...</td>\n",
+       "      <td>[208]</td>\n",
+       "      <td>[0.0006295532498659552, 0.0006295532498659552,...</td>\n",
+       "      <td>[3, 21]</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>43</td>\n",
-       "      <td>Finance</td>\n",
-       "      <td>EcoGuard Solutions, established on April 15, 2...</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...</td>\n",
-       "      <td>[98]</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>100119</td>\n",
+       "      <td>Law</td>\n",
+       "      <td>**RIVERTON, HAMILTON COURT CRIMINAL JUDGMENT**...</td>\n",
+       "      <td>[119]</td>\n",
+       "      <td>[0.000918519715422666, 0.000918519715422666, 0...</td>\n",
+       "      <td>[35, 71]</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>44</td>\n",
-       "      <td>Finance</td>\n",
-       "      <td>Green Fields Agriculture Ltd., established on ...</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[0.0, 0.013276668909498765, 0.0, 0.0, 0.841487...</td>\n",
-       "      <td>[4, 77, 42, 51, 1, 63, 23]</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>100123</td>\n",
+       "      <td>Law</td>\n",
+       "      <td>**Sterling Quarryville Court**\\n\\n**Sterling Q...</td>\n",
+       "      <td>[123]</td>\n",
+       "      <td>[0.0008129004361594237, 0.0008129004361594237,...</td>\n",
+       "      <td>[71]</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -303,8 +303,8 @@
        "      <td>Law</td>\n",
        "      <td>In a significant legal proceeding at the Cedar...</td>\n",
        "      <td>[116]</td>\n",
-       "      <td>[0.0, 0.0, 0.0, 0.0, 0.0, 0.004125167297731591...</td>\n",
-       "      <td>[13, 33, 43, 40, 104, 58, 96]</td>\n",
+       "      <td>[0.0008738349685771486, 0.0008738349685771486,...</td>\n",
+       "      <td>[7, 71]</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -313,9 +313,9 @@
        "      <td>Finance</td>\n",
        "      <td>Retail Emporium, a well-established retail gia...</td>\n",
        "      <td>[59]</td>\n",
-       "      <td>[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...</td>\n",
-       "      <td>[58]</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>[0.0008184300650146137, 0.0008184300650146137,...</td>\n",
+       "      <td>[54, 78]</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -323,9 +323,9 @@
        "      <td>Finance</td>\n",
        "      <td>Month and year when Entertainment Enterprises ...</td>\n",
        "      <td>[41, 44, 46, 49, 54, 55, 62, 67, 69, 71]</td>\n",
-       "      <td>[0.0, 0.0, 0.0, 0.0, 0.00018629520278044213, 0...</td>\n",
-       "      <td>[96]</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>[0.0010194274652340425, 0.0010194274652340425,...</td>\n",
+       "      <td>[70, 78]</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -333,9 +333,9 @@
        "      <td>Law</td>\n",
        "      <td>Amount embezzled by N. Adams in July 2022 acco...</td>\n",
        "      <td>[111, 113, 119, 122, 123, 124, 129, 131, 135, ...</td>\n",
-       "      <td>[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...</td>\n",
-       "      <td>[10, 28]</td>\n",
-       "      <td>0.1</td>\n",
+       "      <td>[0.0016409168834667714, 0.0016409168834667714,...</td>\n",
+       "      <td>[71, 9, 102]</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -343,22 +343,22 @@
        "      <td>Medical</td>\n",
        "      <td>Chief complaint of Q. Reyes according to the h...</td>\n",
        "      <td>[178, 182, 185, 191, 195, 197, 201, 206, 208, ...</td>\n",
-       "      <td>[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...</td>\n",
-       "      <td>[45]</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>[0.0014535708725212666, 0.0014535708725212666,...</td>\n",
+       "      <td>[3, 107]</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>171 rows × 7 columns</p>\n",
+       "<p>63 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "    doc_id   domain                                            content  \\\n",
-       "0       40  Finance  Acme Government Solutions is a government indu...   \n",
-       "1       41  Finance  Entertainment Enterprises Inc. is an entertain...   \n",
-       "2       42  Finance  Advanced Manufacturing Solutions Inc., establi...   \n",
-       "3       43  Finance  EcoGuard Solutions, established on April 15, 2...   \n",
-       "4       44  Finance  Green Fields Agriculture Ltd., established on ...   \n",
+       "0   100046  Finance  JetWing Aviation, established on April 15, 200...   \n",
+       "1   100071  Finance  ABC Education Corporation, a publicly listed c...   \n",
+       "2   100208  Medical  Hospitalization Record\\n\\nBasic Information:\\n...   \n",
+       "3   100119      Law  **RIVERTON, HAMILTON COURT CRIMINAL JUDGMENT**...   \n",
+       "4   100123      Law  **Sterling Quarryville Court**\\n\\n**Sterling Q...   \n",
        "..     ...      ...                                                ...   \n",
        "28  400116      Law  In a significant legal proceeding at the Cedar...   \n",
        "29  400059  Finance  Retail Emporium, a well-established retail gia...   \n",
@@ -367,11 +367,11 @@
        "2   300001  Medical  Chief complaint of Q. Reyes according to the h...   \n",
        "\n",
        "                                     original_doc_ids  \\\n",
-       "0                                                  []   \n",
-       "1                                                  []   \n",
-       "2                                                  []   \n",
-       "3                                                  []   \n",
-       "4                                                  []   \n",
+       "0                                                [46]   \n",
+       "1                                                [71]   \n",
+       "2                                               [208]   \n",
+       "3                                               [119]   \n",
+       "4                                               [123]   \n",
        "..                                                ...   \n",
        "28                                              [116]   \n",
        "29                                               [59]   \n",
@@ -379,36 +379,36 @@
        "1   [111, 113, 119, 122, 123, 124, 129, 131, 135, ...   \n",
        "2   [178, 182, 185, 191, 195, 197, 201, 206, 208, ...   \n",
        "\n",
-       "                                           doc_vector  \\\n",
-       "0   [0.0, 0.028452418256950295, 0.0, 0.0, 0.009268...   \n",
-       "1   [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 6.0549910910951...   \n",
-       "2   [0.0, 0.00963491193391321, 0.00073682970161823...   \n",
-       "3   [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...   \n",
-       "4   [0.0, 0.013276668909498765, 0.0, 0.0, 0.841487...   \n",
-       "..                                                ...   \n",
-       "28  [0.0, 0.0, 0.0, 0.0, 0.0, 0.004125167297731591...   \n",
-       "29  [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...   \n",
-       "0   [0.0, 0.0, 0.0, 0.0, 0.00018629520278044213, 0...   \n",
-       "1   [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...   \n",
-       "2   [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, ...   \n",
+       "                                           doc_vector        topics  \\\n",
+       "0   [0.0011499778990178046, 0.0011499778990178046,...      [78, 17]   \n",
+       "1   [0.001030695364096049, 0.001030695364096049, 0...      [78, 71]   \n",
+       "2   [0.0006295532498659552, 0.0006295532498659552,...       [3, 21]   \n",
+       "3   [0.000918519715422666, 0.000918519715422666, 0...      [35, 71]   \n",
+       "4   [0.0008129004361594237, 0.0008129004361594237,...          [71]   \n",
+       "..                                                ...           ...   \n",
+       "28  [0.0008738349685771486, 0.0008738349685771486,...       [7, 71]   \n",
+       "29  [0.0008184300650146137, 0.0008184300650146137,...      [54, 78]   \n",
+       "0   [0.0010194274652340425, 0.0010194274652340425,...      [70, 78]   \n",
+       "1   [0.0016409168834667714, 0.0016409168834667714,...  [71, 9, 102]   \n",
+       "2   [0.0014535708725212666, 0.0014535708725212666,...      [3, 107]   \n",
        "\n",
-       "                                               topics  topics_hitrate  \n",
-       "0   [18, 88, 93, 84, 17, 98, 79, 60, 44, 34, 1, 76...             NaN  \n",
-       "1                                                [11]             NaN  \n",
-       "2   [36, 107, 77, 44, 89, 31, 34, 76, 88, 22, 73, ...             NaN  \n",
-       "3                                                [98]             NaN  \n",
-       "4                          [4, 77, 42, 51, 1, 63, 23]             NaN  \n",
-       "..                                                ...             ...  \n",
-       "28                      [13, 33, 43, 40, 104, 58, 96]             1.0  \n",
-       "29                                               [58]             0.0  \n",
-       "0                                                [96]             0.0  \n",
-       "1                                            [10, 28]             0.1  \n",
-       "2                                                [45]             0.0  \n",
+       "    topics_hitrate  \n",
+       "0              1.0  \n",
+       "1              1.0  \n",
+       "2              1.0  \n",
+       "3              1.0  \n",
+       "4              1.0  \n",
+       "..             ...  \n",
+       "28             1.0  \n",
+       "29             1.0  \n",
+       "0              1.0  \n",
+       "1              1.0  \n",
+       "2              1.0  \n",
        "\n",
-       "[171 rows x 7 columns]"
+       "[63 rows x 7 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,11 +420,12 @@
     "\n",
     "importlib.reload(evaluation)\n",
     "\n",
-    "transformed_data = nmf_data_normalised\n",
+    "transformed_data = lda_data_normalised.copy()\n",
     "\n",
     "docs = docs_df.copy()\n",
     "docs[\"doc_vector\"] = list(transformed_data)\n",
-    "docs[\"topics\"] = docs[\"doc_vector\"].apply(calc_topics_for_cumulative_threshold, args=(0.95,))\n",
+    "\n",
+    "docs[\"topics\"] = docs[\"doc_vector\"].apply(calc_topics_for_cumulative_threshold, args=(0.55,))\n",
     "\n",
     "# docs[\"len(topics)\"] = docs[\"topics\"].apply(len)\n",
     "# docs[\"topic_hitrate\"] = docs.apply(calc_topic_hitrate, axis=1)\n",
@@ -434,7 +435,7 @@
     "# docs[\"doc_vector\"] = docs[\"doc_vector\"].apply(lambda v: np.sort(v)[::-1]).apply(lambda v: [round(i, 4) for i in v])\n",
     "\n",
     "docs, recall = evaluation.evaluate_clusters(docs, \"topics\")\n",
-    "filtered_docs = docs.loc[docs[\"original_doc_ids\"].notna()]\n",
+    "filtered_docs = docs.loc[docs[\"original_doc_ids\"].apply(lambda x: len(x) > 0)]\n",
     "print(f\"Recall: {round(recall * 100, 2)} %\")\n",
     "print(f\"Recall on non-tabular docs: {round(filtered_docs[\"topics_hitrate\"][:-3].mean() * 100, 2)} %\")\n",
     "print(f\"Average comparisons to make: {evaluation.count_avg_related_docs(docs, \"topics\"):.2f}\")\n",
