--- a/4-retrieve_and_generate.ipynb
+++ b/4-retrieve_and_generate.ipynb
@@ -384,13 +384,13 @@
        "[204 rows x 4 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Prepare for human-based completeness evaluation\n",
+    "# Prepare for completeness evaluation\n",
     "filepath = \"evaluation/keypoint_eval/_queries_with_context_with_DQ_5_generations.csv\"\n",
     "filepath_new = \"evaluation/keypoint_eval/with_DQ.csv\"\n",
     "\n",
@@ -403,17 +403,8 @@
     "    filepath_new,\n",
     "    index=False,\n",
     "    columns=[\"query.content\", \"ground_truth.keypoints\", \"generated_response\", \"keypoint_coverage\"],\n",
-    ")\n",
-    "data"
+    ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2d4a085a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
