--- a/5-evaluate.ipynb
+++ b/5-evaluate.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "d7adc8e2",
    "metadata": {},
    "outputs": [
@@ -28,6 +28,14 @@
      "text": [
       "73.04 %\t(with DQ assessment)\n",
       "62.25 %\t(without DQ assessment)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/ll/qhsvkwd97tsbm3310qw2zl2w0000gn/T/ipykernel_32205/3107746574.py:22: LangChainBetaWarning: The function `loads` is in beta. It is actively being worked on, so the API may change.\n",
+      "  data[\"context\"] = data[\"context\"].apply(lambda chunks: [loads(c) for c in chunks])\n"
      ]
     }
    ],
@@ -81,6 +89,72 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24d1e7e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14.21 %\t(with DQ assessment)\n",
+      "13.14 %\t(without DQ assessment)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/ll/qhsvkwd97tsbm3310qw2zl2w0000gn/T/ipykernel_69514/2420060671.py:22: LangChainBetaWarning: The function `loads` is in beta. It is actively being worked on, so the API may change.\n",
+      "  data[\"context\"] = data[\"context\"].apply(lambda chunks: [loads(c) for c in chunks])\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Calculate Precision\n",
+    "from langchain_core.load import loads\n",
+    "import ast\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from typing import Literal\n",
+    "\n",
+    "\n",
+    "def calculate_precision(\n",
+    "    top_k: int, with_dq: bool = True, print_info_if_wrong: bool = False, emb: Literal[\"_large\", \"\"] = \"\"\n",
+    "):\n",
+    "    filename = (\n",
+    "        f\"evaluation/_queries_with_context_with_DQ_{top_k}.csv\"\n",
+    "        if with_dq\n",
+    "        else f\"evaluation/_queries_with_context_without_DQ_{top_k}.csv\"\n",
+    "    )\n",
+    "    data = pd.read_csv(\n",
+    "        filename,\n",
+    "        converters={\"context\": ast.literal_eval, \"ground_truth.references\": ast.literal_eval},\n",
+    "    )\n",
+    "    data[\"context\"] = data[\"context\"].apply(lambda chunks: [loads(c) for c in chunks])\n",
+    "\n",
+    "    precision_list = []\n",
+    "    for _, row in data.iterrows():\n",
+    "        precision_in_row = []\n",
+    "        for chunk in row[\"context\"]:\n",
+    "            chunk_relevant = False\n",
+    "            for ref in row[\"ground_truth.references\"]:\n",
+    "                if ref.lower().strip() in str(chunk.page_content).lower():\n",
+    "                    chunk_relevant = True\n",
+    "                    break\n",
+    "            precision_in_row.append(chunk_relevant)\n",
+    "        precision_list.append(np.mean(precision_in_row))\n",
+    "    precision = np.mean(precision_list)\n",
+    "\n",
+    "    return precision\n",
+    "\n",
+    "\n",
+    "print(f\"{calculate_precision(5, with_dq=True)*100:.2f} %\\t(with DQ assessment)\")\n",
+    "print(f\"{calculate_precision(5, with_dq=False)*100:.2f} %\\t(without DQ assessment)\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c781d168",
    "metadata": {},
@@ -98,10 +172,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7ec5bd57",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/leon/miniconda3/envs/ma/lib/python3.12/site-packages/requests/__init__.py:86: RequestsDependencyWarning: Unable to find acceptable character detection dependency (chardet or charset_normalizer).\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "### Generate keypoint coverage estimation\n",
     "import pandas as pd\n",
@@ -145,11 +228,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "8be9be2a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55.11 %\t(with DQ assessment)\n",
+      "27.98 %\t(without DQ assessment)\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Calculate Completeness\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "filename_with_dq = \"evaluation/keypoint_eval/_queries_with_context_with_DQ_5_generations.csv\"\n",
+    "filename_without_dq = \"evaluation/keypoint_eval/_queries_with_context_without_DQ_5_generations.csv\"\n",
+    "\n",
+    "completeness_with_dq = np.mean(\n",
+    "    pd.read_csv(filename_with_dq, usecols=[\"keypoint_coverage\"], dtype={\"keypoint_coverage\": \"float64\"})[\n",
+    "        \"keypoint_coverage\"\n",
+    "    ]\n",
+    ")\n",
+    "completeness_without_dq = np.mean(\n",
+    "    pd.read_csv(filename_without_dq, usecols=[\"keypoint_coverage\"], dtype={\"keypoint_coverage\": \"float64\"})[\n",
+    "        \"keypoint_coverage\"\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "print(f\"{completeness_with_dq*100:.2f} %\\t(with DQ assessment)\")\n",
+    "print(f\"{completeness_without_dq*100:.2f} %\\t(without DQ assessment)\")"
+   ]
   }
  ],
  "metadata": {
