--- a/data/explore_documents.ipynb
+++ b/data/explore_documents.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "1e917d6e",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "4456a14f",
    "metadata": {},
    "outputs": [
@@ -71,32 +71,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# original docs: 108\n",
-      "# manipulated textual docs: 30\n",
-      "# manipulated tabular docs: 3\n",
-      "# manipulated textual multi docs: 30\n",
-      "= 171 documents in total\n",
       "\n",
-      "Avegare no. of tokens per document: 1448.32\n"
+      "Avegare no. of tokens per document: 1655.51\n",
+      "Avegare no. of characters per document: 8921.64\n"
      ]
     }
    ],
    "source": [
     "import tiktoken\n",
     "import numpy as np\n",
+    "from utils import io_helpers\n",
     "\n",
     "encoding = tiktoken.encoding_for_model(\"gpt-4o\")\n",
     "\n",
-    "documents = get_documents(print_info=True)\n",
+    "documents = io_helpers.get_documents()\n",
     "\n",
     "lengths = []\n",
+    "num_characters = []\n",
     "\n",
     "for text in documents[\"content\"]:\n",
     "    tokens = encoding.encode(text)\n",
+    "    num_characters.append(len(text))\n",
     "    lengths.append(len(tokens))\n",
     "\n",
     "print()\n",
-    "print(f\"Avegare no. of tokens per document: {np.mean(lengths):.2f}\")"
+    "print(f\"Avegare no. of tokens per document: {np.mean(lengths):.2f}\")\n",
+    "print(f\"Avegare no. of characters per document: {np.mean(num_characters):.2f}\")"
    ]
   }
  ],
