--- a/x-analyze_data.ipynb
+++ b/x-analyze_data.ipynb
@@ -246,6 +246,28 @@
     "print(ids_single)\n",
     "print(ids_multi)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "9305d222",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "204\n"
+     ]
+    }
+   ],
+   "source": [
+    "from utils import io_helpers\n",
+    "\n",
+    "queries = io_helpers.get_queries(\"manipulated_only\")\n",
+    "\n",
+    "print(len(queries))"
+   ]
   }
  ],
  "metadata": {
