--- a/1-embeddings.ipynb
+++ b/1-embeddings.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "2277b08e",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
     "from tenacity import retry, retry_if_exception_type, wait_random, stop_after_attempt\n",
     "import csv\n",
     "\n",
-    "load_dotenv(\"/Users/leon/.env\")\n",
+    "load_dotenv(\"...\")  # set env path\n",
     "client = OpenAI()\n",
     "\n",
     "FILEPATH = \"data/additional_data/docs/_embeddings.csv\"\n",
