--- a/5-evaluate.ipynb
+++ b/5-evaluate.ipynb
@@ -89,6 +89,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "52b508cd",
+   "metadata": {},
+   "source": [
+    "### Precision\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "24d1e7e4",
@@ -172,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "7ec5bd57",
    "metadata": {},
    "outputs": [
@@ -201,13 +209,13 @@
     "    keypoints = row[\"ground_truth.keypoints\"]\n",
     "    generated_answer = row[\"generated_response\"]\n",
     "\n",
-    "    system_prompt, user_prompt = io_helpers.get_prompts(\"keypoints/keypoints_validation\")\n",
+    "    system_prompt, user_prompt = io_helpers.get_prompts(\"metrics/completeness\")\n",
     "    user_prompt = llm.format_user_prompt_keypoint_validation(\n",
     "        user_prompt, question=question, keypoints=keypoints, generated_answer=generated_answer\n",
     "    )\n",
     "\n",
     "    response = llm.call_any_llm(\n",
-    "        system_prompt, user_prompt, model=model, response_format_pydantic=llm.LLMKeypointEvaluationResponse\n",
+    "        system_prompt, user_prompt, model=model, response_format_pydantic=llm.LLMKeypointCompletenessResponse\n",
     "    )\n",
     "\n",
     "    return np.mean(response.keypoint_coverage).item()\n",
@@ -228,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "8be9be2a",
    "metadata": {},
    "outputs": [
@@ -247,8 +255,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "filename_with_dq = \"evaluation/keypoint_eval/_queries_with_context_with_DQ_5_generations.csv\"\n",
-    "filename_without_dq = \"evaluation/keypoint_eval/_queries_with_context_without_DQ_5_generations.csv\"\n",
+    "filename_with_dq = \"evaluation/keypoint_eval/completeness/_queries_with_context_with_DQ_5_generations.csv\"\n",
+    "filename_without_dq = \"evaluation/keypoint_eval/completeness/_queries_with_context_without_DQ_5_generations.csv\"\n",
     "\n",
     "completeness_with_dq = np.mean(\n",
     "    pd.read_csv(filename_with_dq, usecols=[\"keypoint_coverage\"], dtype={\"keypoint_coverage\": \"float64\"})[\n",
@@ -263,6 +271,139 @@
     "\n",
     "print(f\"{completeness_with_dq*100:.2f} %\\t(with DQ assessment)\")\n",
     "print(f\"{completeness_without_dq*100:.2f} %\\t(without DQ assessment)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89a92de5",
+   "metadata": {},
+   "source": [
+    "### Hallucination\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "187917d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Generate keypoint contradiction estimation\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import ast\n",
+    "import importlib\n",
+    "from utils import llm, io_helpers\n",
+    "\n",
+    "importlib.reload(llm)\n",
+    "\n",
+    "\n",
+    "def calc_keypoint_contradictions(row, model: str = \"gpt-4.1\"):\n",
+    "    question = row[\"query.content\"]\n",
+    "    keypoints = row[\"ground_truth.keypoints\"]\n",
+    "    generated_answer = row[\"generated_response\"]\n",
+    "\n",
+    "    system_prompt, user_prompt = io_helpers.get_prompts(\"metrics/hallucination\")\n",
+    "    user_prompt = llm.format_user_prompt_keypoint_validation(\n",
+    "        user_prompt, question=question, keypoints=keypoints, generated_answer=generated_answer\n",
+    "    )\n",
+    "\n",
+    "    response = llm.call_any_llm(\n",
+    "        system_prompt, user_prompt, model=model, response_format_pydantic=llm.LLMKeypointHallucinationResponse\n",
+    "    )\n",
+    "\n",
+    "    return np.mean(response.keypoint_contradiction).item()\n",
+    "\n",
+    "\n",
+    "def generate_keypoint_contradictions(filepath: str, filepath_new: str):\n",
+    "    if filepath == filepath_new:\n",
+    "        raise RuntimeError(\"Paths must differ!\")\n",
+    "    data = pd.read_csv(filename, converters={\"ground_truth.keypoints\": ast.literal_eval})\n",
+    "    data[\"keypoint_contradiction_ratio\"] = data.apply(calc_keypoint_contradictions, axis=1)\n",
+    "    data.to_csv(filepath_new, index=False)\n",
+    "\n",
+    "\n",
+    "filename = \"evaluation/_queries_with_context_with_DQ_5_generations.csv\"\n",
+    "filename_new = \"evaluation/keypoint_eval/hallucination/_queries_with_context_with_DQ_5_generations.csv\"\n",
+    "# _ = generate_keypoint_contradictions(filename, filename_new)\n",
+    "\n",
+    "filename = \"evaluation/_queries_with_context_without_DQ_5_generations.csv\"\n",
+    "filename_new = \"evaluation/keypoint_eval/hallucination/_queries_with_context_without_DQ_5_generations.csv\"\n",
+    "# _ = generate_keypoint_contradictions(filename, filename_new)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d3a420dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "43.91 %\t(with DQ assessment)\n",
+      "70.96 %\t(without DQ assessment)\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Calculate Hallucination\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "filename_with_dq = \"evaluation/keypoint_eval/hallucination/_queries_with_context_with_DQ_5_generations.csv\"\n",
+    "filename_without_dq = \"evaluation/keypoint_eval/hallucination/_queries_with_context_without_DQ_5_generations.csv\"\n",
+    "\n",
+    "hallucination_with_dq = np.mean(\n",
+    "    pd.read_csv(\n",
+    "        filename_with_dq, usecols=[\"keypoint_contradiction_ratio\"], dtype={\"keypoint_contradiction_ratio\": \"float64\"}\n",
+    "    )[\"keypoint_contradiction_ratio\"]\n",
+    ")\n",
+    "hallucination_without_dq = np.mean(\n",
+    "    pd.read_csv(\n",
+    "        filename_without_dq,\n",
+    "        usecols=[\"keypoint_contradiction_ratio\"],\n",
+    "        dtype={\"keypoint_contradiction_ratio\": \"float64\"},\n",
+    "    )[\"keypoint_contradiction_ratio\"]\n",
+    ")\n",
+    "\n",
+    "print(f\"{hallucination_with_dq*100:.2f} %\\t(with DQ assessment)\")\n",
+    "print(f\"{hallucination_without_dq*100:.2f} %\\t(without DQ assessment)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c89e83c",
+   "metadata": {},
+   "source": [
+    "### Irrelevancy\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "41477ba4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.98 %\t(with DQ assessment)\n",
+      "1.06 %\t(without DQ assessment)\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Calculate Irrelevancy\n",
+    "\n",
+    "irrelevancy_with_dq = 1 - completeness_with_dq - hallucination_with_dq\n",
+    "irrelevancy_without_dq = 1 - completeness_without_dq - hallucination_without_dq\n",
+    "\n",
+    "print(f\"{irrelevancy_with_dq*100:.2f} %\\t(with DQ assessment)\")\n",
+    "print(f\"{irrelevancy_without_dq*100:.2f} %\\t(without DQ assessment)\")"
    ]
   }
  ],
