--- a/data/manipulate_data.ipynb
+++ b/data/manipulate_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "d6703517",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
     "\n",
     "from dotenv import load_dotenv\n",
     "\n",
-    "_ = load_dotenv(\"/Users/leon/.env\")"
+    "_ = load_dotenv(\"...\")  # Set env path"
    ]
   },
   {
