--- a/3-chunking.ipynb
+++ b/3-chunking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "9fc88c05",
    "metadata": {},
    "outputs": [],
@@ -12,10 +12,10 @@
     "import pandas as pd\n",
     "from dotenv import load_dotenv\n",
     "\n",
-    "load_dotenv(\"/Users/leon/.env\")\n",
+    "load_dotenv(\"...\")  # Set env path\n",
     "\n",
     "# DB specifications\n",
-    "LANCEDB_DIR = \"/Users/leon/Documents/study/MA/lancedb\"\n",
+    "LANCEDB_DIR = \"...\"  # set database dir\n",
     "TABLE_NAME_DOCS = \"documents\"\n",
     "TABLE_NAME_CHUNKS = \"chunks_emb-large\"\n",
     "\n",
