--- a/4-retrieve_and_generate.ipynb
+++ b/4-retrieve_and_generate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": null,
    "id": "7815f7af",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
     "from langchain.embeddings import OpenAIEmbeddings\n",
     "\n",
     "# DB specifications\n",
-    "LANCEDB_DIR = \"/Users/leon/Documents/study/MA/lancedb\"\n",
+    "LANCEDB_DIR = \"...\"  # Set database path\n",
     "TABLE_NAME_DOCS = \"documents\"\n",
     "TABLE_NAME_CHUNKS = \"chunks\"\n",
     "\n",
